# tolstack

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
build_tools/: build.py  requirements.txt
build_tools/git_hooks/: update_requirements.py
build_tools/pyinstaller-hooks/: hook-tolstack.py
examples/: 1D_stack_with_thermal.txt  street_sign.txt
test_outputs/: example_input_save.txt
tests/: GUISaveOpen_test.py  Miscellaneous_test.py  StackDim_test.py  StackExpr_test.py  StackFormat_test.py  StackTypes_test.py  StackUtils_test.py  TestUtils.py  TestUtils_test.py
tolstack/: AppConfig.py  StackDim.py  StackExpr.py  StackFormat.py  StackParser.py  StackTree.py  StackTypes.py  StackUtils.py  __main__.py  compute_stack.py  gui.py  help.md  main.py
tolstack/content/: full_help.md  help.md
tolstack/gui/: CustomPDFElements.py  FileIO.py  FormatPDF.py  FormatText.py  GUITypes.py  GUIWidgets.py  PDFStyles.py  Qt5Utils.py  gui.py
validation_inputs/: test_app_open_save.txt  test_expression_derivative.txt  test_expression_expand.txt  test_gui_inputs.txt  test_gui_output.txt  test_input.txt  test_input.yaml  test_input_v3.txt  test_input_v4.txt  test_output.txt
validation_inputs/images/: README.txt
